--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">HNGTask</string>
+    <string name="dashboard_txt">HGNInternship</string>
+    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
+    <string name="register">Register</string>
+    <string name="login">Login</string>
 </resources>
